# snowflake-fsp

./: .gitmodules  Cargo.toml  README.md  SPECIFICATION.md
ntptfs-winfsp-rs/src/fs/: context.rs
ntptfs-winfsp-rs/src/native/: lfs.rs  nt.rs
ptfs-winfsp-rs/src/fs/: passthrough.rs
snowflake-fsp/: Cargo.toml
snowflake-fsp/src/: main.rs  service.rs
snowflake-fsp/src/fs/: passthrough.rs
snowflake-fsp/src/fsp/: filesystem.rs  interface.rs  mod.rs  service.rs  util.rs
snowflake-projfs/: Cargo.toml
snowflake-projfs-common/: Cargo.toml
snowflake-projfs-common/src/: lib.rs  path.rs
snowflake-projfs-common/src/projections/: mod.rs  parse.rs  projections.rs
snowflake-projfs-fsp/: Cargo.toml
snowflake-projfs/src/: main.rs
snowflake-projfs/src/fsp/: filesystem.rs  fs.rs  host.rs  lfs.rs  mod.rs  nt.rs  service.rs  util.rs
winfsp/src/: util.rs
winfsp/src/filesystem/: context.rs  dirbuffer.rs  interface.rs
