[package]
name = "snowflake-projfs-fsp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.39.0", features = ["Win32_Foundation", "Win32_System_LibraryLoader", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_WindowsProgramming", "Win32_System_Console", "Win32_System_IO"] }
widestring = "1"
winfsp = { path = "../winfsp" }
winfsp-sys = { path = "../winfsp-sys" }
anyhow = "1"

[build-dependencies]
winfsp = { path = "../winfsp" }

